//apply plugin: "java"

sourceCompatibility = 1.8
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

test {
    testLogging.showStandardStreams = true
    testLogging.exceptionFormat = 'full'
}

dependencies {
    //logging
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
    //batik svg parser - https://xmlgraphics.apache.org/batik/
//    compile group: 'org.apache.xmlgraphics', name: 'batik-parser', version: '1.9.1' // optimisation opportunity: use only the classes needed from batik
    compile 'com.google.guava:guava:27.1-jre'

    //test dependencies
    //logback dependencies
    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    testCompile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
    //unit testing and mocking dependencies
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile "org.mockito:mockito-core:2.25.1"


}
